fix the bug of the google pixel not showing all the verses in the reader on landscape view

--- a/src/components/ReaderText/styles.css
+++ b/src/components/ReaderText/styles.css
@@ -102,13 +102,13 @@
 }
 
 @media (max-height: 700px) and (min-width: 1201px) {
-    #readerText:not([ismobile="true"]) {
+    #readerText[ismobile="false"] {
         height: 330px;
     }
 }
 
 @media (max-height: 700px) and (min-width: 769px) and (max-width: 1200px) {
-    #readerText:not([ismobile="true"]) {
+    #readerText[ismobile="false"] {
         height: 400px;
     }
 }
